[package]
name = "rbrb"
version = "0.0.1"
edition = "2021"

authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Write robust rollback networked games"
license = "MIT"
repository = "https://github.com/shelbyd/rbrb"

[dependencies]

[dev-dependencies]
bincode = "1.3.3"
macroquad = "0.3.10"
serde = {version = "1.0.130", features = ["derive"]}
structopt = "0.3.25"
