[package]
name = "rbrb"
version = "0.0.1"
edition = "2021"

authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Write robust rollback networked games"
license = "MIT"
repository = "https://github.com/shelbyd/rbrb"

[dependencies]
bincode = "1.3.3"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}

[dev-dependencies]
env_logger = "0.9.0"
macroquad = "0.3.10"
structopt = "0.3.25"
