[package]
name = "rbrb"
version = "0.0.1"
edition = "2021"

authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
description = "Write robust rollback networked games"
license = "MIT"
repository = "https://github.com/shelbyd/rbrb"

[dependencies]
bincode = "1.3.3"
derive_more = "0.99.16"
log = "0.4.14"
rand = { version = "0.8.4", features = ["small_rng"] }
rand_distr = "0.4.2"
serde = {version = "1.0.130", features = ["derive"]}

[dev-dependencies]
env_logger = "0.9.0"
macroquad = "0.3.10"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
structopt = "0.3.25"
